--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ projects:
     archived: false
     forks: true
     projects:
-      -"rakshith6404"
+      -rakshith6404
     # - repo-name
 
 # social_media:
