--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ defaults:
     scope:
       path: "" # an empty string here means all files in the project
       type: "posts"
-    values:
+      values:
       layout: "post"
 
 projects:
@@ -26,7 +26,7 @@ projects:
     archived: false
     forks: true
     projects:
-      -rakshith6404
+      - rakshith6404
     # - repo-name
 
 # social_media:
@@ -34,7 +34,7 @@ projects:
   # dribbble: your_username
   # facebook: your_username
   # hackerrank: your_username
-  # instagram: your_username
+  instagram: rak_s_hith
   # keybase: your_username
   # linkedin: your_username
   # mastodon: your_username
