--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ projects:
       - rakshith6404
     # - repo-name
 
-# social_media:
+social_media:
   # behance: your_username
   # dribbble: your_username
   # facebook: your_username
