--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ projects:
   sort_by: pushed
   # sort_by options:
   #   - pushed
-  #   - stars
+      - stars
   limit: 9
   exclude:
     archived: false
