--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ social_media:
   # dribbble: your_username
   # facebook: your_username
   # hackerrank: your_username
-  instagram: rak_s_hith
+  Instagram: rak_s_hith
   # keybase: your_username
   # linkedin: your_username
   # mastodon: your_username
