--- a/_config.yml
+++ b/_config.yml
@@ -17,14 +17,14 @@ defaults:
       layout: "post"
 
 projects:
-  sort_by: pushed
+  sort_by: 
   # sort_by options:
-  #   - pushed
+      - pushed
       - stars
   limit: 9
   exclude:
     archived: false
-    forks: false
+    forks: true
     projects:
       - rakshith6404
     # - repo-name
