--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ social_media:
   # behance: your_username
   # dribbble: your_username
   # facebook: your_username
-  # hackerrank: your_username
-  Instagram: rak_s_hith
+  hackerrank: rakshith6404
+  instagram: rak_s_hith
   # keybase: your_username
   # linkedin: your_username
   # mastodon: your_username
