--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ social_media:
   # mastodon: your_username
   # medium: your_username
   # stackoverflow: your_user_id
-  # telegram: your_username
+  telegram: rak_s_hith
   # twitter: your_username
   # unsplash: your_username
   # vk: your_username
