--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ social_media:
   # linkedin: your_username
   # mastodon: your_username
   # medium: your_username
-  # stackoverflow: your_user_id
+  stackoverflow: rak_s_hith
   telegram: rak_s_hith
   # twitter: your_username
   # unsplash: your_username
